--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <ion-header translucent>
             <ion-toolbar>
                 <ion-title>Map</ion-title>
-                <ion-button onclick="location.reload()">Exit</ion-button>
-
+                <ion-button onclick="location.reload()" slot="start">Exit</ion-button>
             </ion-toolbar>
         </ion-header>
         <br />
