--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     }
     function checkForBus(possibleBusIDs, milage, selectedStop, StopObj, busMarkers, StopMark) {
         // console.log(busMarkers)
-        fetch('http://coder.weathon.top:8888/buses')
+        fetch('/buses')
             .then(function (response) {
                 return response.json();
             })
@@ -115,7 +115,7 @@
                         realMile = haversine_distance(busMarkers[buses[i].id], StopMark);
                         document.getElementById("mile").innerText = "The distance from the bus to the stop is " + realMile + " miles";
                         if (realMile <= milage) {
-                            var audio = new Audio('http://coder.weathon.top:8888/audio');
+                            var audio = new Audio('/audio');
                             audio.play();
                         }
                     }
@@ -146,8 +146,8 @@
             alert("Please enter a number");
             return;
         }
-        //fetch from http://coder.weathon.top:8888/buses
-        fetch('http://coder.weathon.top:8888/buses')
+        //fetch from /buses
+        fetch('/buses')
             .then(function (response) {
                 return response.json();
             })
@@ -213,7 +213,7 @@ e-mail wg25r@umsystem.edu. The data of the app is fetched from Doublemap via my 
         },
         created: function () {
             var self = this;
-            fetch('http://coder.weathon.top:8888/routes')
+            fetch('/routes')
                 .then(function (response) {
                     return response.json();
                 })
@@ -226,7 +226,7 @@ e-mail wg25r@umsystem.edu. The data of the app is fetched from Doublemap via my 
             setAlert: function (routeID) {
                 selectedRoute = routeID;
                 document.getElementById("card-modal").present()
-                fetch('http://coder.weathon.top:8888/routes')
+                fetch('/routes')
                     .then(function (response) {
                         console.log(routeID)
                         return response.json();
@@ -248,7 +248,7 @@ e-mail wg25r@umsystem.edu. The data of the app is fetched from Doublemap via my 
 
                         }
                         // var stops = {};
-                        fetch('http://coder.weathon.top:8888/stops')
+                        fetch('/stops')
                             .then(function (response) {
                                 return response.json();
                             })
