--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <br />
         <ion-list-header>Select A Bus Stop That You Will Get On The Bus</ion-list-header>
         <p>Now this app is calculating the line distance not the driving distance, sorry.</p>
+        <b>Please keep the app open as we knew on some phones this app won't work in backgraound</b>
         <!-- bozishangsuanruantyrunhuxihlongxou -->
         <div id="GMap" style="height: 60%;width:95%;left:2.5%"></div>
         <div id="mile"></div>
@@ -227,13 +228,13 @@
             center: myLatLng,
         });
     }
-    if (localStorage.getItem("notif") == null || localStorage.getItem("notif") <= Date.now()-3600*48) {
+    //if (localStorage.getItem("notif") == null || localStorage.getItem("notif") <= Date.now()-3600*48) {
         alert("This app is made by a Mizzou student, who is NOT connected with the University of Missouri, Tiger Line, GoCoMo, or the City of Columbia.\
  This app only represents my position. This app is still in testing; it might cause a false alert or miss alert. If you have any advice, please\
  e-mail wg25r@umsystem.edu. The data of the app is fetched from Doublemap via my own server. Due to iOS audio policy, the app might not be able to play the audio by defult, we are trying to solve this issue. ")
-        localStorage.setItem("notif", Date.now());
+        //localStorage.setItem("notif", Date.now());
 
-    }
+    //}
     new Vue({
         el: '#app',
         data: {
