--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
         <ion-content fullscreen>
         <!-- <audio src="https://busmap.weathon.top/audio" autoPlay></audio> -->
-
+            <P>You can add this to your home screen for ease of access</p>
+            <p>This app is open source and we need more volunteers! Please e-mail me if you are interst. wg25r@umsystem.edu</p>
             <ion-list>
                 <ion-list-header> Select A Route </ion-list-header>
 
