--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ion-toolbar>
         </ion-header>
 
-        <ion-content>
+        <ion-content  class="ion-padding">
         <!-- <audio src="https://busmap.weathon.top/audio" autoPlay></audio> -->
 
             <ion-list>
