--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 <ion-modal id="card-modal" backdropDismiss=false>
-    <ion-content>
+    <ion-content  class="ion-padding">
         <ion-header translucent>
             <ion-toolbar>
                 <ion-title>Map</ion-title>
